pl 31
	- bf: replaced Score_column assert by a warning (thanks Scott)
	- bf: mi2mu version output (thanks Scott)
	- faq updates
	- always output lily header with  Lily version
	- bar mucking: make scorebars/braces different from repeat bars.
	- feta: repeatcolon, clef bf's
	- debian/ updates. (AF)
	- moved debian stuff into toplevel dir

********
nov 11
pl 30
	- feta: G clef. 
	- scripts now do relative coords (fixes lyrics + barnumber bug)
	- bf: Lyrics lexer mode
	- bf: bass clef

********
pl 29
	- feta: bass clef, bf: dynamics, bf: 64th flag
	

********
oct 30
pl 28
	- revised Staff_symbol::brew_molecule_p ()
	- naming: \makelilytitle
	- fixes for TeX titledefs (JAF)
	- junked some obsolete pedal stuff.

pl 27.om-je-te-helpen-met-je-ps-spul.jcn1
	- embedded slurs:
	  * bf: placements
	  * added \embeddedtex
	  * postscript is default
	  * fixed \embeddedps
	  * fixed mf: draw_slur
	  * postscript macro: draw_slur

********
oct 29
pl 27
	- -t/--test switch for experimental stuff.
	- bf: debian optimize is not with 'z'
	- mf: naming feta fonts are now called feta16, feta-beams16, etc.
	- feta: ledgerline
	- lily adjustments for new and elegant ledger line
	- bf: mf-source path.

pl 26.jcn1
	- bf: numerals
	- sleur.ly
	- embedded slur testing 
	- bf + patch: make-patch release.py / VERSION


********
oct 26
pl 26
	- bf: \transpose
	- feta: numerals 0 - 9, rewrote flags.

	

********
oct 22

pl 25 	
	- variable stemlength
	- feta: 32nd, 64th flags
	- font.ly
	- dist & tarball made in out/
	- rewrote release.sh in python
	- notehead/stem attachment better.
	- more Stem cleanage
	- related Beam cleanage
	- started numeral font (JCN)
	- bf: whole rest outside staff.

*********
oct 20
pl 24
	- internationalization preps (FP)
	- rewrote make-patch in python
	- BUGS: added another flex/libio crash explanation
	- feta: flags


********
pl 23
	- feta changes: 1/4 rest, flat, bf 8-128 rest
	- bf: cadenza
	- bf: scripts
	- bf: rest-collision
	- bf: meter placement