@@ -37,24 +37,9 @@ block_rest_x# = 3/2 interline#;
 
 define_pixels(block_rest_y, block_rest_x);
 
-def block_rest=
-	pickup pencircle scaled blot_diameter;
-
-	bot y1 = 0;
-	top y2 = block_rest_y;
-	y3 = y2;
-	y4 = y1;
-
-	rt x1 = block_rest_x;
-	x2 = x1;
-	lft x3 = 0;
-	x4 = x3;
-	save p;
-	path p;
-	p:=z1 -- z2 -- z3 -- z4 -- cycle;
-
-	filldraw p;
-enddef;
+def block_rest =
+	draw_block ((0,0), (block_rest_x, block_rest_y));
+	enddef;
 
 fet_beginchar( "whole rest", "0", "wholerest");
 	set_char_box(0, block_rest_x#,
