@@ -43,24 +43,6 @@ def draw_foot(expr xpos) =
 	endgroup;
 	enddef;
 
-def draw_flare(expr pos,alpha,beta,line,flare) =
-	begingroup;
-	clearxy;
-	penpos1(line,180+beta+alpha);
-	z1r=pos;
-	penpos2(flare,180+beta+alpha);
-	z2=z3;
-	penpos3(flare,0+alpha);
-	z3l=z1r+(1/2+0.43)*flare*dir(alpha+beta);
-	z4=z2r-1/6flare*dir(alpha);
-	penlabels(1,2,3,4);
-	pickup pencircle;
-	save t; t=0.833;
-	fill z1r{dir(alpha)}..z3r{dir(180+alpha-beta)}..z2l{dir(alpha+180)}
-		..z3l{dir(180+alpha+beta)}..tension t..z4{dir(180+alpha+beta)}..z1l{dir(alpha+180)}..cycle;
-	endgroup;
-	enddef;
-
 def draw_six =
 	set_char_box(0, 2thick#+2thin#, 0, height#);
 	message "w:"&decimal w;
